Fixed bug #36248 (CURLOPT_HEADERFUNCTION, couldn't set the function in the class).